# LinuxDevelopment2021

03_Multifile/: Makefile  fun.c
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
07_Environmental/: Makefile.am  configure.ac  rhasher.c  tests.sh
10_I18n/: README.md  guess.c  meson.build
10_I18n/po/: meson.build  ru.po
11_Documenting/: Doxyfile  README.md  guess.c  meson.build
11_Documenting/documentation/: meson.build
11_Documenting/po/: ru.po
